<resources>
    <string name="app_name">Cupones</string>
    <string name="main_botton_consult">Consultar</string>
    <string name="main_botton_create">Crear Cupon</string>
    <string name="main_text_title">Bienvenido, ingrese su cupon y acontinuacion presione en consultar.</string>
    <string name="main_hint_cupon">Cupon</string>
    <string name="main_hint_descipcion">Descripcion</string>
    <string name="error_invalid_exist">Error cupon existe.</string>
    <string name="error_invalid_long">Error con la longitud</string>
    <string name="error_unknow">Error desconocido</string>
    <string name="main_save_success">Cupon creado</string>
    <string name="main_hint_active">Cupon activo</string>
    <string name="main_text_title_new">Cupon disponible añada la descripcion y pulse en \"Crear cupon\"</string>
</resources>